# fastapi_boilerplate

./: pyproject.toml  ruff.toml
