[tool.pytest.ini_options]
pythonpath = [
    ".", "uprising_back"
]
asyncio_mode="auto"

[tool.poetry]
name = "uprising-back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
motor = "^3.5.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic-settings = "^2.4.0"
requests = "^2.32.3"
boto3 = "^1.35.5"
python-multipart = "^0.0.9"
uvicorn = "^0.30.6"
bcrypt = "^4.2.0"


[tool.poetry.group.develop.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
